--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "axios": "^1.3.4",
     "bootstrap": "^4.4.1",
     "formik": "^2.1.4",
     "jquery": "3.4.1",
