--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "formik": "^2.1.4",
     "jquery": "3.4.1",
     "lodash": "^4.17.15",
+    "mysql": "^2.18.1",
     "popper.js": "^1.16.1",
     "react": "^16.13.1",
     "react-bootstrap-sweetalert": "^5.1.9",
